5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1573_1327.log
== TEST (2019-03-25 14:50:27) 
-- CODE:
conta=90.00
heraclito=55.00
print(conta-heraclito)
-- OUTPUT:
35.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:51:36) 
-- CODE:
conta=90.00
heraclito=55.00
print(fredegunda pagou = conta-heraclito)

-- ERROR:
File "XXXX", line 3
    print(fredegunda pagou = conta-heraclito)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:52:15) 
-- CODE:
conta=90.00
heraclito=55.00
print(conta-heraclito)

-- OUTPUT:
35.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:58:12) 
-- CODE:
conta=90.00
heraclito=55.00
print(conta-heraclito)

-- EXECUTION TIME:
0.141574
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
